--- a/devburger-front/package.json
+++ b/devburger-front/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "yup": "^1.4.0"
   },
