--- a/devburger-back/package.json
+++ b/devburger-back/package.json
@@ -30,5 +30,8 @@
   "scripts": {
     "dev": "bun --watch src/server.js"
   },
-  "type": "module"
+  "type": "module",
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  }
 }
