--- a/devburger-back/package.json
+++ b/devburger-back/package.json
@@ -17,6 +17,7 @@
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4",
+    "stripe": "^17.3.1",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
