--- a/devburger-front/package.json
+++ b/devburger-front/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
