fixed bug - option name database from url

--- a/devburger-back/.env.exemple
+++ b/devburger-back/.env.exemple
@@ -1,5 +1,5 @@
 # MongoDB URI
-MONGO_URL=mongodb://localhost:27017/
+MONGO_URL="mongodb://mongodb:mongodb@localhost:27017/Orders?authSource=admin"
 
 # Configuração do banco de dados PostgreSQL
 PG_HOST=host                 # Endereço do host do banco de dados
