--- a/devburger-front/package.json
+++ b/devburger-front/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "yup": "^1.4.0"
